modified import endpoint
