# internal/api/apimodel/model_import_file_result.go
@@ -1,0 +1,14 @@
+/*
+ * Set and Tune API
+ *
+ * API for managing sets and tunes
+ *
+ * API version: 1.0.0
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package apimodel
+
+type ImportFileResult struct {
+	Message string `json:"message,omitempty"`
+}
